--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -110,6 +110,18 @@
     <Compile Include="Configurator\Service.cs" />
     <Compile Include="Configurator\SpendTheDocument.cs" />
     <Compile Include="Configurator\Function.cs" />
+    <Compile Include="FormAbout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAbout.Designer.cs">
+      <DependentUpon>FormAbout.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormConstants.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormConstants.Designer.cs">
+      <DependentUpon>FormConstants.cs</DependentUpon>
+    </Compile>
     <Compile Include="NumericControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -741,6 +753,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DirectoryControl.resx">
       <DependentUpon>DirectoryControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAbout.resx">
+      <DependentUpon>FormAbout.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormConstants.resx">
+      <DependentUpon>FormConstants.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="NumericControl.resx">
       <DependentUpon>NumericControl.cs</DependentUpon>
