--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -1227,7 +1227,8 @@
     <Content Include="Шаблони\РухКоштів_Залишки.xslt">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Шаблони\ТовариНаСкладах.xslt" />
+    <Content Include="Шаблони\ТовариНаСкладах_ЗалишкиТаОбороти.xslt" />
+    <Content Include="Шаблони\ТовариНаСкладах_Залишки.xslt" />
     <Content Include="Шаблони\РозрахункиЗПостачальниками.xslt">
       <SubType>Designer</SubType>
     </Content>
