--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -1218,6 +1218,9 @@
     <Content Include="Trash\Service.txt" />
     <Content Include="Шаблони\ВідомістьПоТоварахНаСкладах.xslt" />
     <Content Include="Шаблони\ЗамовленняПостачальникам.xslt" />
+    <Content Include="Шаблони\ТовариНаСкладах_Документи.xslt">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Шаблони\РухКоштів_Документи.xslt">
       <SubType>Designer</SubType>
     </Content>
