--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -1218,6 +1218,9 @@
     <Content Include="Trash\Service.txt" />
     <Content Include="Шаблони\ВідомістьПоТоварахНаСкладах.xslt" />
     <Content Include="Шаблони\ЗамовленняПостачальникам.xslt" />
+    <Content Include="Шаблони\РозрахункиЗПостачальниками_Документи.xslt">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Шаблони\ТовариНаСкладах_Документи.xslt">
       <SubType>Designer</SubType>
     </Content>
@@ -1232,7 +1235,7 @@
     </Content>
     <Content Include="Шаблони\ТовариНаСкладах_ЗалишкиТаОбороти.xslt" />
     <Content Include="Шаблони\ТовариНаСкладах_Залишки.xslt" />
-    <Content Include="Шаблони\РозрахункиЗПостачальниками.xslt">
+    <Content Include="Шаблони\РозрахункиЗПостачальниками_Залишки.xslt">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Шаблони\РозрахункиЗКлієнтами.xslt">
