--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -177,6 +177,18 @@
     <Compile Include="NumericControl.designer.cs">
       <DependentUpon>NumericControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Довідники\СеріїНоменклатури\Form_СеріїНоменклатури.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\СеріїНоменклатури\Form_СеріїНоменклатури.designer.cs">
+      <DependentUpon>Form_СеріїНоменклатури.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Довідники\СеріїНоменклатури\Form_СеріїНоменклатуриЕлемент.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Довідники\СеріїНоменклатури\Form_СеріїНоменклатуриЕлемент.designer.cs">
+      <DependentUpon>Form_СеріїНоменклатуриЕлемент.cs</DependentUpon>
+    </Compile>
     <Compile Include="Документи\ФункціїДляДокументів.cs" />
     <Compile Include="Документи\ВведенняЗалишків\Form_ВведенняЗалишків_ТабличнаЧастина_БанківськіРахунки.cs">
       <SubType>UserControl</SubType>
@@ -810,6 +822,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="NumericControl.resx">
       <DependentUpon>NumericControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\СеріїНоменклатури\Form_СеріїНоменклатури.resx">
+      <DependentUpon>Form_СеріїНоменклатури.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Довідники\СеріїНоменклатури\Form_СеріїНоменклатуриЕлемент.resx">
+      <DependentUpon>Form_СеріїНоменклатуриЕлемент.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Документи\ВведенняЗалишків\Form_ВведенняЗалишків_ТабличнаЧастина_БанківськіРахунки.resx">
       <DependentUpon>Form_ВведенняЗалишків_ТабличнаЧастина_БанківськіРахунки.cs</DependentUpon>
