--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -1280,6 +1280,9 @@
     <Content Include="Шаблони\ЗамовленняКлієнта_Документи.xslt">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Шаблони\ПартіїТоварів_Документи.xslt">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Шаблони\ТовариНаСкладах_Документи.xslt">
       <SubType>Designer</SubType>
     </Content>
