--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -288,6 +288,12 @@
     <Compile Include="Звіти\ПартіїТоварів\Form_ПартіїТоварів_Звіт.Designer.cs">
       <DependentUpon>Form_ПартіїТоварів_Звіт.cs</DependentUpon>
     </Compile>
+    <Compile Include="Звіти\ТовариНаСкладах\Form_ТовариНаСкладахПоНоменклатурі.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Звіти\ТовариНаСкладах\Form_ТовариНаСкладахПоНоменклатурі.Designer.cs">
+      <DependentUpon>Form_ТовариНаСкладахПоНоменклатурі.cs</DependentUpon>
+    </Compile>
     <Compile Include="СпільніФорми\Form_Report.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -914,6 +920,9 @@
     <EmbeddedResource Include="Звіти\ПартіїТоварів\Form_ПартіїТоварів_Звіт.resx">
       <DependentUpon>Form_ПартіїТоварів_Звіт.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Звіти\ТовариНаСкладах\Form_ТовариНаСкладахПоНоменклатурі.resx">
+      <DependentUpon>Form_ТовариНаСкладахПоНоменклатурі.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="СпільніФорми\Form_Report.resx">
       <DependentUpon>Form_Report.cs</DependentUpon>
     </EmbeddedResource>
@@ -1324,6 +1333,7 @@
     </Content>
     <Content Include="Шаблони\РозрахункиЗПостачальниками_ЗалишкиТаОбороти.xslt" />
     <Content Include="Шаблони\ПартіїТоварів_Залишки.xslt" />
+    <Content Include="Шаблони\ТовариНаСкладах_ЗалишкиПоНоменклатурі.xslt" />
     <Content Include="Шаблони\ТовариНаСкладах_ЗалишкиТаОбороти.xslt" />
     <Content Include="Шаблони\ТовариНаСкладах_Залишки.xslt" />
     <Content Include="Шаблони\РозрахункиЗПостачальниками_Залишки.xslt">
