--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -311,6 +311,12 @@
     <Compile Include="Звіти\ПартіїТоварів\Form_ПартіїТоварівПоНоменклатурі.Designer.cs">
       <DependentUpon>Form_ПартіїТоварівПоНоменклатурі.cs</DependentUpon>
     </Compile>
+    <Compile Include="Звіти\РозрахункиЗКонтрагентами\Form_РозрахункиЗКонтрагентами_Звіт.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Звіти\РозрахункиЗКонтрагентами\Form_РозрахункиЗКонтрагентами_Звіт.Designer.cs">
+      <DependentUpon>Form_РозрахункиЗКонтрагентами_Звіт.cs</DependentUpon>
+    </Compile>
     <Compile Include="Звіти\РозрахункиЗКлієнтами\Form_РозрахункиЗКлієнтами_Звіт.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -974,6 +980,9 @@
     <EmbeddedResource Include="Звіти\ПартіїТоварів\Form_ПартіїТоварівПоНоменклатурі.resx">
       <DependentUpon>Form_ПартіїТоварівПоНоменклатурі.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Звіти\РозрахункиЗКонтрагентами\Form_РозрахункиЗКонтрагентами_Звіт.resx">
+      <DependentUpon>Form_РозрахункиЗКонтрагентами_Звіт.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Звіти\РозрахункиЗКлієнтами\Form_РозрахункиЗКлієнтами_Звіт.resx">
       <DependentUpon>Form_РозрахункиЗКлієнтами_Звіт.cs</DependentUpon>
     </EmbeddedResource>
@@ -1372,6 +1381,10 @@
     <Content Include="Шаблони\ЗамовленняПостачальникам_Залишки.xslt" />
     <Content Include="Шаблони\ПартіїТоварів_ЗалишкиПоНоменклатурі.xslt" />
     <Content Include="Шаблони\РозрахункиЗКлієнтами_Документи.xslt">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="Шаблони\РозрахункиЗКонтрагентами_ЗалишкиТаОбороти.xslt" />
+    <Content Include="Шаблони\РозрахункиЗКонтрагентами_Залишки.xslt">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Шаблони\РозрахункиЗПостачальниками_Документи.xslt">
