--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -152,7 +152,7 @@
     </Compile>
     <Compile Include="Configurator\Service.cs" />
     <Compile Include="Configurator\SpendTheDocument.cs" />
-    <Compile Include="Configurator\Function.cs" />
+    <Compile Include="Configurator\ФункціїДляДовідниківТаДокументів.cs" />
     <Compile Include="FormAbout.cs">
       <SubType>Form</SubType>
     </Compile>
