--- a/StorageAndTrade/StorageAndTrade.csproj
+++ b/StorageAndTrade/StorageAndTrade.csproj
@@ -1381,6 +1381,7 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="Шаблони\ЗамовленняПостачальникам_Залишки.xslt" />
+    <Content Include="Шаблони\РеалізаціяТоварівТаПослуг_ДрукНакладна.xslt" />
     <Content Include="Шаблони\ПартіїТоварів_ЗалишкиПоНоменклатурі.xslt" />
     <Content Include="Шаблони\РозрахункиЗКонтрагентами_Документи.xslt">
       <SubType>Designer</SubType>
